PARSER/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ARRAY
    AS
    CALLABLE
    CATCH
    CLASS
    CLONE
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT
    DOUBLEQUOTE
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    NEW
    PLUSEQUAL
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    QUESTIONMARK
    QUOTE
    REQUIRE_ONCE
    STATIC
    THROW
    TIMESEQUAL
    TRAIT
    TRY
    UNSET
    USE
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> echo_stmt
Rule 6     declaration -> selection_stmt
Rule 7     declaration -> iteration_stmt
Rule 8     declaration -> fun_declaration
Rule 9     declaration -> header_declaration
Rule 10    echo_stmt -> echo_stmt ECHO data_type SEMICOLON
Rule 11    echo_stmt -> echo_stmt ECHO IDVAR SEMICOLON
Rule 12    echo_stmt -> echo_stmt ECHO fun_declaration SEMICOLON
Rule 13    echo_stmt -> empty
Rule 14    boolean -> TRUE
Rule 15    boolean -> FALSE
Rule 16    var_declaration -> var_declaration2 SEMICOLON
Rule 17    var_declaration2 -> IDVAR var_declaration2
Rule 18    var_declaration2 -> IDVAR
Rule 19    var_declaration2 -> TIMESTIMES IDVAR
Rule 20    var_declaration2 -> TIMESTIMES IDVAR var_declaration2
Rule 21    var_declaration2 -> IDVAR EQUAL data_type var_declaration2
Rule 22    var_declaration2 -> IDVAR EQUAL data_type
Rule 23    var_declaration2 -> IDVAR EQUAL IDVAR var_declaration2
Rule 24    var_declaration2 -> IDVAR EQUAL IDVAR
Rule 25    var_declaration2 -> AMPERSANT IDVAR var_declaration2
Rule 26    var_declaration2 -> AMPERSANT IDVAR EQUAL IDVAR var_declaration2
Rule 27    var_declaration2 -> AMPERSANT IDVAR EQUAL IDVAR
Rule 28    var_declaration2 -> AMPERSANT IDVAR
Rule 29    var_declaration2 -> IDVAR EQUAL simple_expression
Rule 30    data_type -> NUMBER
Rule 31    data_type -> boolean
Rule 32    data_type -> STRING
Rule 33    fun_declaration -> FUNCTION ID LPAREN params RPAREN
Rule 34    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 35    params -> param_list
Rule 36    params -> empty
Rule 37    param_list -> param_list COMMA param_list
Rule 38    param_list -> param
Rule 39    param -> IDVAR
Rule 40    param -> IDVAR LBRACKET RBRACKET
Rule 41    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 42    local_declarations -> local_declarations var_declaration
Rule 43    local_declarations -> empty
Rule 44    statement_list -> statement_list statement
Rule 45    statement_list -> empty
Rule 46    statement -> expression_stmt
Rule 47    statement -> compount_stmt
Rule 48    statement -> selection_stmt
Rule 49    statement -> iteration_stmt
Rule 50    statement -> echo_stmt
Rule 51    statement -> return_stmt
Rule 52    expression_stmt -> expression SEMICOLON
Rule 53    expression_stmt -> SEMICOLON
Rule 54    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 55    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 56    selection -> ELSE statement
Rule 57    selection -> ELSEIF statement selection
Rule 58    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 59    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 60    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 61    iteration_stmt -> FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 62    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 63    iteration_stmt -> DO LBLOCK statement SEMICOLON RBLOCK WHILE LPAREN expression RPAREN
Rule 64    return_stmt -> RETURN SEMICOLON
Rule 65    return_stmt -> RETURN expression SEMICOLON
Rule 66    expression -> var EQUAL expression
Rule 67    expression -> simple_expression
Rule 68    expression -> var EQUAL AMPERSANT IDVAR
Rule 69    expression -> expression logic_operator expression
Rule 70    logic_operator -> AND
Rule 71    logic_operator -> OR
Rule 72    logic_operator -> XOR
Rule 73    var -> IDVAR
Rule 74    var -> IDVAR LBRACKET expression RBRACKET
Rule 75    simple_expression -> additive_expression relop additive_expression
Rule 76    simple_expression -> additive_expression
Rule 77    relop -> LESS
Rule 78    relop -> LESSEQUAL
Rule 79    relop -> GREATER
Rule 80    relop -> GREATEREQUAL
Rule 81    relop -> DEQUAL
Rule 82    relop -> DISTINT
Rule 83    relop -> ISEQUAL
Rule 84    additive_expression -> additive_expression addop term
Rule 85    additive_expression -> term
Rule 86    additive_expression -> term MINUSMINUS
Rule 87    additive_expression -> term PLUSPLUS
Rule 88    addop -> PLUS
Rule 89    addop -> MINUS
Rule 90    term -> term mulop factor
Rule 91    term -> factor
Rule 92    mulop -> TIMES
Rule 93    mulop -> DIVIDE
Rule 94    factor -> LPAREN expression RPAREN
Rule 95    factor -> var
Rule 96    factor -> NUMBER
Rule 97    factor -> boolean
Rule 98    factor -> ID LPAREN args RPAREN
Rule 99    args -> args_list
Rule 100   args -> empty
Rule 101   args -> VOID
Rule 102   args_list -> args_list COMMA expression
Rule 103   args_list -> expression
Rule 104   header_declaration -> REQUIRE LPAREN STRING RPAREN SEMICOLON
Rule 105   header_declaration -> INCLUDE LPAREN STRING RPAREN SEMICOLON
Rule 106   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 25 26 27 28 68
AND                  : 70
ARRAY                : 
AS                   : 
BREAK                : 59 60
CALLABLE             : 
CASE                 : 59
CATCH                : 
CLASS                : 
CLONE                : 
CLOSETAG             : 1
COLON                : 59 60
COMMA                : 37 102
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 60
DEQUAL               : 81
DIE                  : 
DISTINT              : 82
DIVIDE               : 93
DO                   : 63
DOT                  : 
DOUBLEQUOTE          : 
ECHO                 : 10 11 12
ELSE                 : 56
ELSEIF               : 57
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 21 22 23 24 26 27 29 66 68
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 15
FOR                  : 61
FOREACH              : 
FUNCTION             : 33 34
GLOBAL               : 
GOTO                 : 
GREATER              : 79
GREATEREQUAL         : 80
HASHTAG              : 
ID                   : 33 34 98
IDVAR                : 11 17 18 19 20 21 22 23 23 24 24 25 26 26 27 27 28 29 39 40 68 73 74
IF                   : 54 55
IMPLEMENTS           : 
INCLUDE              : 105
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTERFACE            : 
ISEQUAL              : 83
ISSET                : 
LBLOCK               : 41 63
LBRACKET             : 40 74
LESS                 : 77
LESSEQUAL            : 78
LIST                 : 
LPAREN               : 33 34 54 55 58 61 62 63 94 98 104 105
MINUS                : 89
MINUSEQUAL           : 
MINUSMINUS           : 86
NAMESPACE            : 
NEW                  : 
NUMBER               : 30 59 96
OPENTAG              : 1
OR                   : 71
PLUS                 : 88
PLUSEQUAL            : 
PLUSPLUS             : 87
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUESTIONMARK         : 
QUOTE                : 
RBLOCK               : 41 63
RBRACKET             : 40 74
REQUIRE              : 104
REQUIRE_ONCE         : 
RETURN               : 64 65
RPAREN               : 33 34 54 55 58 61 62 63 94 98 104 105
SEMICOLON            : 10 11 12 16 52 53 59 60 61 61 63 64 65 104 105
STATIC               : 
STRING               : 32 104 105
SWITCH               : 58
THROW                : 
TIMES                : 92
TIMESEQUAL           : 
TIMESTIMES           : 19 20
TRAIT                : 
TRUE                 : 14
TRY                  : 
UNSET                : 
USE                  : 
VOID                 : 101
WHILE                : 62 63
XOR                  : 72
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 61 75 75 76 84
addop                : 84
args                 : 98
args_list            : 99 102
boolean              : 31 97
compount_stmt        : 34 47
data_type            : 10 21 22
declaration          : 2 3
declaration_list     : 1 2
echo_stmt            : 5 10 11 12 41 41 41 50
empty                : 13 36 43 45 100
expression           : 52 54 55 61 62 63 65 66 69 69 74 94 102 103
expression_stmt      : 46
factor               : 90 91
fun_declaration      : 8 12
header_declaration   : 9
iteration_stmt       : 7 49
local_declarations   : 41 42
logic_operator       : 69
mulop                : 90
param                : 38
param_list           : 35 37 37
params               : 33 34
program              : 0
relop                : 75
return_stmt          : 51
selection            : 55 57
selection_stmt       : 6 48
simple_expression    : 29 67
statement            : 44 54 55 56 57 58 59 60 61 62 63
statement_list       : 41 44
term                 : 84 85 86 87 90
var                  : 58 66 68 95
var_declaration      : 4 42
var_declaration2     : 16 17 20 21 23 25 26 61

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . echo_stmt
    (6) declaration -> . selection_stmt
    (7) declaration -> . iteration_stmt
    (8) declaration -> . fun_declaration
    (9) declaration -> . header_declaration
    (16) var_declaration -> . var_declaration2 SEMICOLON
    (10) echo_stmt -> . echo_stmt ECHO data_type SEMICOLON
    (11) echo_stmt -> . echo_stmt ECHO IDVAR SEMICOLON
    (12) echo_stmt -> . echo_stmt ECHO fun_declaration SEMICOLON
    (13) echo_stmt -> . empty
    (54) selection_stmt -> . IF LPAREN expression RPAREN statement
    (55) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (58) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (59) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (60) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (61) iteration_stmt -> . FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (62) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (63) iteration_stmt -> . DO LBLOCK statement SEMICOLON RBLOCK WHILE LPAREN expression RPAREN
    (33) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (34) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (104) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (105) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMICOLON
    (17) var_declaration2 -> . IDVAR var_declaration2
    (18) var_declaration2 -> . IDVAR
    (19) var_declaration2 -> . TIMESTIMES IDVAR
    (20) var_declaration2 -> . TIMESTIMES IDVAR var_declaration2
    (21) var_declaration2 -> . IDVAR EQUAL data_type var_declaration2
    (22) var_declaration2 -> . IDVAR EQUAL data_type
    (23) var_declaration2 -> . IDVAR EQUAL IDVAR var_declaration2
    (24) var_declaration2 -> . IDVAR EQUAL IDVAR
    (25) var_declaration2 -> . AMPERSANT IDVAR var_declaration2
    (26) var_declaration2 -> . AMPERSANT IDVAR EQUAL IDVAR var_declaration2
    (27) var_declaration2 -> . AMPERSANT IDVAR EQUAL IDVAR
    (28) var_declaration2 -> . AMPERSANT IDVAR
    (29) var_declaration2 -> . IDVAR EQUAL simple_expression
    (106) empty -> .

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
    IF              shift and go to state 14
    SWITCH          shift and go to state 15
    CASE            shift and go to state 16
    DEFAULT         shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    FUNCTION        shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    IDVAR           shift and go to state 12
    TIMESTIMES      shift and go to state 24
    AMPERSANT       shift and go to state 25
    ECHO            reduce using rule 106 (empty -> .)
    CLOSETAG        reduce using rule 106 (empty -> .)

  ! IF              [ reduce using rule 106 (empty -> .) ]
  ! SWITCH          [ reduce using rule 106 (empty -> .) ]
  ! CASE            [ reduce using rule 106 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 106 (empty -> .) ]
  ! FOR             [ reduce using rule 106 (empty -> .) ]
  ! WHILE           [ reduce using rule 106 (empty -> .) ]
  ! DO              [ reduce using rule 106 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 106 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 106 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 106 (empty -> .) ]
  ! IDVAR           [ reduce using rule 106 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 106 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 106 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    echo_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    fun_declaration                shift and go to state 9
    header_declaration             shift and go to state 10
    var_declaration2               shift and go to state 11
    empty                          shift and go to state 13

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . echo_stmt
    (6) declaration -> . selection_stmt
    (7) declaration -> . iteration_stmt
    (8) declaration -> . fun_declaration
    (9) declaration -> . header_declaration
    (16) var_declaration -> . var_declaration2 SEMICOLON
    (10) echo_stmt -> . echo_stmt ECHO data_type SEMICOLON
    (11) echo_stmt -> . echo_stmt ECHO IDVAR SEMICOLON
    (12) echo_stmt -> . echo_stmt ECHO fun_declaration SEMICOLON
    (13) echo_stmt -> . empty
    (54) selection_stmt -> . IF LPAREN expression RPAREN statement
    (55) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (58) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (59) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (60) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (61) iteration_stmt -> . FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (62) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (63) iteration_stmt -> . DO LBLOCK statement SEMICOLON RBLOCK WHILE LPAREN expression RPAREN
    (33) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (34) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (104) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (105) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMICOLON
    (17) var_declaration2 -> . IDVAR var_declaration2
    (18) var_declaration2 -> . IDVAR
    (19) var_declaration2 -> . TIMESTIMES IDVAR
    (20) var_declaration2 -> . TIMESTIMES IDVAR var_declaration2
    (21) var_declaration2 -> . IDVAR EQUAL data_type var_declaration2
    (22) var_declaration2 -> . IDVAR EQUAL data_type
    (23) var_declaration2 -> . IDVAR EQUAL IDVAR var_declaration2
    (24) var_declaration2 -> . IDVAR EQUAL IDVAR
    (25) var_declaration2 -> . AMPERSANT IDVAR var_declaration2
    (26) var_declaration2 -> . AMPERSANT IDVAR EQUAL IDVAR var_declaration2
    (27) var_declaration2 -> . AMPERSANT IDVAR EQUAL IDVAR
    (28) var_declaration2 -> . AMPERSANT IDVAR
    (29) var_declaration2 -> . IDVAR EQUAL simple_expression
    (106) empty -> .

  ! shift/reduce conflict for CLOSETAG resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
    CLOSETAG        shift and go to state 26
    IF              shift and go to state 14
    SWITCH          shift and go to state 15
    CASE            shift and go to state 16
    DEFAULT         shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    FUNCTION        shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    IDVAR           shift and go to state 12
    TIMESTIMES      shift and go to state 24
    AMPERSANT       shift and go to state 25
    ECHO            reduce using rule 106 (empty -> .)

  ! CLOSETAG        [ reduce using rule 106 (empty -> .) ]
  ! IF              [ reduce using rule 106 (empty -> .) ]
  ! SWITCH          [ reduce using rule 106 (empty -> .) ]
  ! CASE            [ reduce using rule 106 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 106 (empty -> .) ]
  ! FOR             [ reduce using rule 106 (empty -> .) ]
  ! WHILE           [ reduce using rule 106 (empty -> .) ]
  ! DO              [ reduce using rule 106 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 106 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 106 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 106 (empty -> .) ]
  ! IDVAR           [ reduce using rule 106 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 106 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 106 (empty -> .) ]

    declaration                    shift and go to state 27
    var_declaration                shift and go to state 5
    echo_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    fun_declaration                shift and go to state 9
    header_declaration             shift and go to state 10
    var_declaration2               shift and go to state 11
    empty                          shift and go to state 13

state 4

    (3) declaration_list -> declaration .

    CLOSETAG        reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    INCLUDE         reduce using rule 3 (declaration_list -> declaration .)
    IDVAR           reduce using rule 3 (declaration_list -> declaration .)
    TIMESTIMES      reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    IDVAR           reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> echo_stmt .
    (10) echo_stmt -> echo_stmt . ECHO data_type SEMICOLON
    (11) echo_stmt -> echo_stmt . ECHO IDVAR SEMICOLON
    (12) echo_stmt -> echo_stmt . ECHO fun_declaration SEMICOLON

  ! shift/reduce conflict for ECHO resolved as shift
    CLOSETAG        reduce using rule 5 (declaration -> echo_stmt .)
    IF              reduce using rule 5 (declaration -> echo_stmt .)
    SWITCH          reduce using rule 5 (declaration -> echo_stmt .)
    CASE            reduce using rule 5 (declaration -> echo_stmt .)
    DEFAULT         reduce using rule 5 (declaration -> echo_stmt .)
    FOR             reduce using rule 5 (declaration -> echo_stmt .)
    WHILE           reduce using rule 5 (declaration -> echo_stmt .)
    DO              reduce using rule 5 (declaration -> echo_stmt .)
    FUNCTION        reduce using rule 5 (declaration -> echo_stmt .)
    REQUIRE         reduce using rule 5 (declaration -> echo_stmt .)
    INCLUDE         reduce using rule 5 (declaration -> echo_stmt .)
    IDVAR           reduce using rule 5 (declaration -> echo_stmt .)
    TIMESTIMES      reduce using rule 5 (declaration -> echo_stmt .)
    AMPERSANT       reduce using rule 5 (declaration -> echo_stmt .)
    ECHO            shift and go to state 28

  ! ECHO            [ reduce using rule 5 (declaration -> echo_stmt .) ]


state 7

    (6) declaration -> selection_stmt .

    CLOSETAG        reduce using rule 6 (declaration -> selection_stmt .)
    IF              reduce using rule 6 (declaration -> selection_stmt .)
    SWITCH          reduce using rule 6 (declaration -> selection_stmt .)
    CASE            reduce using rule 6 (declaration -> selection_stmt .)
    DEFAULT         reduce using rule 6 (declaration -> selection_stmt .)
    FOR             reduce using rule 6 (declaration -> selection_stmt .)
    WHILE           reduce using rule 6 (declaration -> selection_stmt .)
    DO              reduce using rule 6 (declaration -> selection_stmt .)
    FUNCTION        reduce using rule 6 (declaration -> selection_stmt .)
    REQUIRE         reduce using rule 6 (declaration -> selection_stmt .)
    INCLUDE         reduce using rule 6 (declaration -> selection_stmt .)
    IDVAR           reduce using rule 6 (declaration -> selection_stmt .)
    TIMESTIMES      reduce using rule 6 (declaration -> selection_stmt .)
    AMPERSANT       reduce using rule 6 (declaration -> selection_stmt .)
    ECHO            reduce using rule 6 (declaration -> selection_stmt .)


state 8

    (7) declaration -> iteration_stmt .
